[tool.black]
line-length = 125
skip-string-normalization = false
skip-magic-trailing-comma = true

[tool.poetry]
name = "nootbot.v2"
version = "0.1.0"
description = ""
authors = ["Abdul <abdul@horus64.org>"]
license = "GPL-v3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
